Fix data header style and fix periodic table initial visibility

--- a/src/components/data-display/SearchUI/SearchUI.css
+++ b/src/components/data-display/SearchUI/SearchUI.css
@@ -202,7 +202,6 @@
 }
 
 .mpc-search-ui .mpc-paginator,
-.mpc-search-ui .mpc-search-ui-data-header,
 .mpc-search-ui .mpc-active-filter-buttons,
 .mpc-search-ui .mpc-search-ui-data-view {
   margin-top: 0.5rem;
